# PEA

./: CMakeLists.txt  PEA_etap_1.sln  dynamiccpp.txt  dynamich.txt  main.cpp
PEA_etap_1/: BestFirstBranchAndBoundSolver.cpp  BestFirstBranchAndBoundSolver.h  BranchAndBoundSolver.cpp  BranchAndBoundSolver.h  BruteForceSolver.cpp  BruteForceSolver.h  DynamicSolver.cpp  DynamicSolver.h  Enums.h  Graph.cpp  Graph.h  MultiThreadedBFSolver.cpp  MultiThreadedBFSolver.h  PEA_etap_1.cpp  PEA_etap_1.vcxproj  PEA_etap_1.vcxproj.filters  SimulatedAnnealingSolver.cpp  SimulatedAnnealingSolver.h  Solver.cpp  Solver.h  TabuSearchSolver.cpp  TabuSearchSolver.h  TestCase.cpp  TestCase.h  Tester.cpp  Tester.h
PEA_etap_1/Release/: PEA_etap_1.exe.recipe  PEA_etap_1.iobj  PEA_etap_1.ipdb
PEA_etap_1/results/: branch_and_bound_results — kopia.txt  branch_and_bound_results.txt  branch_and_bound_results2.txt  brute_force_results.txt  brute_force_results2.txt  dynamic_results — kopia.txt  dynamic_results.txt  dynamic_results2.txt  simulated_annealing_results_times.txt  tabu_search_results_errors.txt
PEA_etap_1/results2/: SA_ERROR_GREEDY_INSERT_CAUCHY.txt  SA_ERROR_GREEDY_INSERT_GEOMETRICAL.txt  SA_ERROR_GREEDY_INVERT_CAUCHY.txt  SA_ERROR_GREEDY_INVERT_GEOMETRICAL.txt  SA_ERROR_GREEDY_SWAP_CAUCHY.txt  SA_ERROR_GREEDY_SWAP_GEOMETRICAL.txt  SA_ERROR_RANDOM_INSERT_CAUCHY.txt  SA_ERROR_RANDOM_INSERT_GEOMETRICAL.txt  SA_ERROR_RANDOM_INVERT_CAUCHY.txt  SA_ERROR_RANDOM_INVERT_GEOMETRICAL.txt  (+13 more)
graph/: Graph.cpp  Graph.h
helpers/: Node.cpp  Node.h
test/: init.txt
tester/: Tester.cpp  Tester.h
(+73 files in other folders)
